fall back on system customnetpdl.xml
Requiring customnetpdl.xml in the cwd is pretty annoying when launching
the datapath. Try the cwd, but fall back to DATADIR if not available.

--- a/Makefile.am
+++ b/Makefile.am
@@ -68,3 +68,4 @@ include debian/automake.mk
 
 netpdldir = $(datadir)/openflow
 netpdl_DATA = customnetpdl.xml
+AM_CPPFLAGS += -DNETPDLDIR='"$(netpdldir)"'
